[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/LobbyMenu/LobbyMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menus/LobbyMenu/HostLobby.gd" type="Script" id=7]

[node name="HostLobby" instance=ExtResource( 6 )]
margin_top = 0.0
script = ExtResource( 7 )

[node name="Label" parent="LobbyFrame" index="0"]
text = "Host Lobby"

[node name="RacersList" parent="LobbyFrame/RacersList" index="1"]
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false, "Item 21", null, false, "Item 22", null, false, "Item 23", null, false ]

[node name="ReadyButton" parent="LobbyFrame/ButtonsPanel" index="0"]
anchor_left = -0.193
anchor_top = -0.28
anchor_bottom = 1.453
margin_left = 158.38
margin_top = 29.04
margin_right = -587.884
margin_bottom = -38.111
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 1, 0, 1 )
text = "Race"

[node name="LeaveButton" parent="LobbyFrame/ButtonsPanel" index="1"]
anchor_top = -0.28
anchor_right = 1.401
anchor_bottom = 1.462
margin_top = 29.04
margin_right = -345.924
margin_bottom = -38.966

[connection signal="pressed" from="LobbyFrame/RaceSettings/Level/LevelLeft" to="." method="_level_select_left"]
[connection signal="pressed" from="LobbyFrame/RaceSettings/Level/LevelRight" to="." method="_level_select_right"]
[connection signal="pressed" from="LobbyFrame/RaceSettings/Laps/LapsDecrease" to="." method="_decrease_lap_amount"]
[connection signal="pressed" from="LobbyFrame/RaceSettings/Laps/LapsIncrease" to="." method="_increase_lap_amount"]
[connection signal="pressed" from="LobbyFrame/RaceSettings/NPCs/NPCsDecrease" to="." method="_decrease_NPC_amount"]
[connection signal="pressed" from="LobbyFrame/RaceSettings/NPCs/NPCsIncrease" to="." method="_increase_NPC_amount"]
[connection signal="pressed" from="LobbyFrame/ButtonsPanel/ReadyButton" to="." method="_setup_race"]
